fix: postman queries
